--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AceArena</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Navbar Section -->
@@ -25,16 +27,17 @@
     <div id="home">
         <!-- Feature Links Box Positioned Slightly Above the Welcome Text -->
         <div class="feature-links">
-            <a href="e-exam.html">E-exam</a>
-            <a href="#Openforum">Openforum</a>
-            <a href="#E-repository">E-repository</a>
-            <a href="#Mywall">Mywall</a>
+            <a href="e-exam.html" target="_blank">E-exam</a>
+            <a href="openforum.html" target="_blank">Openforum</a>
+            <a href="#E-repository" target="_blank">E-repository</a>
+            <a href="#Mywall" target="_blank">Mywall</a>
         </div>
-        
+
         <h2 class="unfold-text">Welcome to AceArena</h2>
         <div>
             <img src="https://pngimg.com/d/children_PNG17974.png" alt="Welcome Image" width="300">
-            <p>AceArena offers a suite of educational tools including e-Exams, interactive forums, a repository for resources, and personalized wall features to enhance your learning experience.</p>
+            <p>AceArena offers a suite of educational tools including e-Exams, interactive forums, a repository for
+                resources, and personalized wall features to enhance your learning experience.</p>
         </div>
     </div>
 
@@ -48,4 +51,5 @@
     </footer>
 
 </body>
+
 </html>
