--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="e-exam.html">E-exam</a>
             <a href="#Openforum">Openforum</a>
             <a href="#E-repository">E-repository</a>
-            <a href="#Mywall">Mywall</a>
+            <a href="mywall.html">Mywall</a>
         </div>
         
         <h2 class="unfold-text">Welcome to AceArena</h2>
