--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - EdConnect</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="regis.css">
 </head>
 <body>
 
@@ -22,12 +22,14 @@
             <label for="age">Age:</label>
             <input type="number" id="age" name="age" min="1">
             <label>Gender:</label>
-            <input type="radio" name="gender" value="male" id="male">
-            <label for="male">Male</label>
-            <input type="radio" name="gender" value="female" id="female">
-            <label for="female">Female</label>
-            <input type="radio" name="gender" value="other" id="other">
-            <label for="other">Other</label>
+            <div class="radio-group">
+                <input type="radio" name="gender" value="male" id="male">
+                <label for="male">Male</label>
+                <input type="radio" name="gender" value="female" id="female">
+                <label for="female">Female</label>
+                <input type="radio" name="gender" value="other" id="other">
+                <label for="other">Other</label>
+            </div>
             <label for="address">College Address:</label>
             <textarea id="address" name="address" rows="3"></textarea>
             <label for="branch">Branch:</label>
@@ -38,14 +40,16 @@
                 <option value="civil">Civil</option>
             </select>
             <label>Technical Skills:</label>
+          <div class="checkbox-group">
             <input type="checkbox" name="skills" value="c" id="skill-c">
-            <label for="skill-c">C</label>
-            <input type="checkbox" name="skills" value="java" id="skill-java">
-            <label for="skill-java">Java</label>
+                <label for="skill-c">C</label>
+             <input type="checkbox" name="skills" value="java" id="skill-java">
+                <label for="skill-java">Java</label>
             <input type="checkbox" name="skills" value="python" id="skill-python">
-            <label for="skill-python">Python</label>
+                <label for="skill-python">Python</label>
             <input type="checkbox" name="skills" value="jsp" id="skill-jsp">
-            <label for="skill-jsp">JSP</label>
+                 <label for="skill-jsp">JSP</label>
+           </div>
             <label for="resume">Resume Upload:</label>
             <input type="file" id="resume" name="resume">
             <label for="photo">Photo Upload:</label>
