--- a/e-exam.html
+++ b/e-exam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Exam</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="e-exam.css">
 </head>
 <body>
 
@@ -20,6 +20,7 @@
 
         <div id="exam-section" style="display: none;">
             <h3 id="subject-name"></h3>
+            <div id="timer">Time Left: <span id="time-left">60</span> seconds</div>
             <div id="question-container"></div>
             <button id="submit-exam" style="display: none;">Submit Exam</button>
         </div>
@@ -32,79 +33,7 @@
         </div>
     </div>
 
-    <script>
-        const startExamButton = document.getElementById('start-exam');
-        const subjectSelect = document.getElementById('subject-select');
-        const examSection = document.getElementById('exam-section');
-        const questionContainer = document.getElementById('question-container');
-        const submitExamButton = document.getElementById('submit-exam');
-        const resultSection = document.getElementById('result-section');
-        const scoreElement = document.getElementById('score');
-        const progressReportElement = document.getElementById('progress-report');
-
-        const questions = {
-            math: [
-                { question: "What is 2 + 2?", choices: ["3", "4", "5"], answer: "4" },
-                { question: "What is 5 * 5?", choices: ["10", "20", "25"], answer: "25" }
-            ],
-            science: [
-                { question: "What planet is known as the Red Planet?", choices: ["Earth", "Mars", "Jupiter"], answer: "Mars" },
-                { question: "What is H2O?", choices: ["Oxygen", "Hydrogen", "Water"], answer: "Water" }
-            ],
-            history: [
-                { question: "Who was the first President of the United States?", choices: ["Abraham Lincoln", "George Washington", "Thomas Jefferson"], answer: "George Washington" },
-                { question: "In what year did World War II end?", choices: ["1945", "1939", "1918"], answer: "1945" }
-            ]
-        };
-
-        let currentSubject = '';
-        let correctAnswers = 0;
-
-        startExamButton.addEventListener('click', () => {
-            currentSubject = subjectSelect.value;
-            if (currentSubject) {
-                examSection.style.display = 'block';
-                document.getElementById('subject-name').textContent = `Exam: ${currentSubject}`;
-                loadQuestions(currentSubject);
-                startExamButton.style.display = 'none';
-            } else {
-                alert("Please select a subject.");
-            }
-        });
-
-        function loadQuestions(subject) {
-            questionContainer.innerHTML = '';
-            questions[subject].forEach((q, index) => {
-                const questionElement = document.createElement('div');
-                questionElement.innerHTML = `<p>${q.question}</p>`;
-                q.choices.forEach(choice => {
-                    questionElement.innerHTML += `<input type="radio" name="question${index}" value="${choice}"> ${choice}<br>`;
-                });
-                questionContainer.appendChild(questionElement);
-            });
-            submitExamButton.style.display = 'block';
-        }
-
-        submitExamButton.addEventListener('click', () => {
-            const userAnswers = Array.from(questionContainer.querySelectorAll('input[type="radio"]:checked'));
-            correctAnswers = 0;
-            questions[currentSubject].forEach((q, index) => {
-                if (userAnswers[index] && userAnswers[index].value === q.answer) {
-                    correctAnswers++;
-                }
-            });
-
-            const totalQuestions = questions[currentSubject].length;
-            const score = (correctAnswers / totalQuestions) * 100;
-            scoreElement.textContent = `You scored: ${score}%`;
-            progressReportElement.textContent = `You answered ${correctAnswers} out of ${totalQuestions} questions correctly.`;
-
-            resultSection.style.display = 'block';
-            examSection.style.display = 'none';
-            startExamButton.style.display = 'block';
-            submitExamButton.style.display = 'none';
-        });
-    </script>
+    <script src="e-exam.js"></script>
 
 </body>
 </html>
