--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>AceArena</h1>
         </div>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="signup.html" target="_blank">Login</a></li>
             <li><a href="login.html" target="_blank">Register</a></li>
         </ul>
@@ -29,7 +29,7 @@
         <div class="feature-links">
             <a href="e-exam.html" target="_blank">E-exam</a>
             <a href="openforum.html" target="_blank">Openforum</a>
-            <a href="#E-repository" target="_blank">E-repository</a>
+            <a href="e-repository.html" target="_blank">E-repository</a>
             <a href="#Mywall" target="_blank">Mywall</a>
         </div>
 
