everything working fine

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <div id="home">
         <!-- Feature Links Box Positioned Slightly Above the Welcome Text -->
         <div class="feature-links">
+            
             <a href="e-exam.html" target="_blank">E-exam</a>
             <a href="openforum.html" target="_blank">Openforum</a>
             <a href="e-repository.html" target="_blank">E-repository</a>
-            <a href="#Mywall" target="_blank">Mywall</a>
+            <a href="mywall.html" target="_blank">Mywall</a>
         </div>
 
         <h2 class="unfold-text">Welcome to AceArena</h2>
