--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - EdConnect</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="regis.css">
 </head>
 <body>
 
