--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AceArena</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Navbar Section -->
@@ -15,7 +17,7 @@
             <h1>AceArena</h1>
         </div>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="signup.html" target="_blank">Login</a></li>
             <li><a href="login.html" target="_blank">Register</a></li>
         </ul>
@@ -25,16 +27,18 @@
     <div id="home">
         <!-- Feature Links Box Positioned Slightly Above the Welcome Text -->
         <div class="feature-links">
-            <a href="e-exam.html">E-exam</a>
-            <a href="#Openforum">Openforum</a>
-            <a href="#E-repository">E-repository</a>
-            <a href="mywall.html">Mywall</a>
+            
+            <a href="e-exam.html" target="_blank">E-exam</a>
+            <a href="openforum.html" target="_blank">Openforum</a>
+            <a href="e-repository.html" target="_blank">E-repository</a>
+            <a href="mywall.html" target="_blank">Mywall</a>
         </div>
-        
+
         <h2 class="unfold-text">Welcome to AceArena</h2>
         <div>
             <img src="https://pngimg.com/d/children_PNG17974.png" alt="Welcome Image" width="300">
-            <p>AceArena offers a suite of educational tools including e-Exams, interactive forums, a repository for resources, and personalized wall features to enhance your learning experience.</p>
+            <p>AceArena offers a suite of educational tools including e-Exams, interactive forums, a repository for
+                resources, and personalized wall features to enhance your learning experience.</p>
         </div>
     </div>
 
@@ -48,4 +52,5 @@
     </footer>
 
 </body>
+
 </html>
