--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
             <img src="logo.jpg" alt="AceArena Logo" class="logo">
             <h1>AceArena</h1>
         </div>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="signup.html" target="_blank">Login</a></li>
-            <li><a href="login.html" target="_blank">Register</a></li>
-        </ul>
+        <div class="nav-middle">
+            <input type="text" placeholder="Search..." class="search-bar">
+        </div>
+        <div class="nav-right">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="signup.html" target="_blank">Login</a></li>
+                <li><a href="register.html" target="_blank">Register</a></li>
+            </ul>
+            <img src="image.png" alt="Profile Picture" class="profile-pic">
+        </div>
     </nav>
 
     <!-- Home Section -->
     <div id="home">
         <!-- Feature Links Box Positioned Slightly Above the Welcome Text -->
         <div class="feature-links">
-            
             <a href="e-exam.html" target="_blank">E-exam</a>
             <a href="openforum.html" target="_blank">Openforum</a>
             <a href="e-repository.html" target="_blank">E-repository</a>
@@ -42,6 +47,22 @@
         </div>
     </div>
 
+    <!-- About Section -->
+    <div id="about">
+        <iframe src="about.html" frameborder="0" style="width: 100%; height: 600px;"></iframe>
+    </div>
+
+    <!-- Features Section -->
+    <div id="features">
+        <iframe src="describe.html" frameborder="0" style="width: 100%; height: 600px;"></iframe>
+    </div>
+
+    <!-- Contact Section -->
+    <div id="contact">
+        <iframe src="contact.html" frameborder="0" style="width: 100%; height: 600px;"></iframe>
+    </div>
+
+    <!-- Footer -->
     <footer>
         <p>© 2024 EdConnect. All rights reserved.</p>
         <ul>
