--- a/signup.html
+++ b/signup.html
@@ -16,14 +16,15 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form" id="sign-in-form">
             <h2 class="title">Sign in</h2>
+            
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" id="signin-username" placeholder="Username" />
+              <input type="text" id="email" placeholder="email" />
               <small class="error-message"></small>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" id="signin-password" placeholder="Password" />
+              <input type="password" id="password" placeholder="Password" />
               <small class="error-message"></small>
             </div>
             <input type="submit" value="Login" class="btn solid" />
@@ -105,6 +106,8 @@
       </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-database.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
